--- a/app/views/cosmetics-general/ingredients-ingredients-search-grouped.html
+++ b/app/views/cosmetics-general/ingredients-ingredients-search-grouped.html
@@ -297,6 +297,8 @@
                             <option value="score">Relevance</option>
                             <option value="date_descending">Newest</option>
                             <option value="date_ascending">Oldest</option>
+                            <option value="rp_descending">Responsible Person A-Z</option>
+                            <option value="rp_ascending">Responsible Person Z-A</option>
                         </select>
 
                         <button class="govuk-button opss-js-enabled-hidden" data-module="govuk-button">
@@ -364,7 +366,7 @@
                     </tr>
                     </thead>
 
-                    <tbody class="govuk-table__body grouped-by-on">
+                    <tbody class="govuk-table__body opss-table-grouped-by--1">
                     <tr class="govuk-table__row">
                         <th class="govuk-visually-hidden">
                             Name
@@ -400,7 +402,7 @@
                       </tr>                    
                     </tbody>
 
-                    <tbody class="govuk-table__body grouped-by-on">
+                    <tbody class="govuk-table__body opss-table-grouped-by--1">
                     <tr class="govuk-table__row">
                         <th class="govuk-visually-hidden">
                             Name
@@ -434,7 +436,7 @@
                       </tr>                      
                     </tbody>
 
-                    <tbody class="govuk-table__body grouped-by-on">
+                    <tbody class="govuk-table__body opss-table-grouped-by--1">
                     <tr class="govuk-table__row">
                         <th class="govuk-visually-hidden">
                             Name
@@ -468,7 +470,7 @@
                       </tr>                    
                     </tbody>
 
-                    <tbody class="govuk-table__body grouped-by-on">
+                    <tbody class="govuk-table__body opss-table-grouped-by--1">
                     <tr class="govuk-table__row">
                         <th class="govuk-visually-hidden">
                             Name
@@ -502,7 +504,7 @@
                       </tr>                    
                     </tbody>
 
-                    <tbody class="govuk-table__body">
+                    <tbody class="govuk-table__body opss-table-grouped-by--2">
                     <tr class="govuk-table__row">
                         <th class="govuk-visually-hidden">
                             Name
@@ -536,7 +538,7 @@
                       </tr>                    
                     </tbody>
 
-                    <tbody class="govuk-table__body">
+                    <tbody class="govuk-table__body opss-table-grouped-by--2">
                     <tr class="govuk-table__row">
                         <th class="govuk-visually-hidden">
                             Name
@@ -569,12 +571,7 @@
                         </td>
                       </tr>                    
                     </tbody>
-
-
-
-
-
-                    <tbody class="govuk-table__body">
+                        <tbody class="govuk-table__body opss-table-grouped-by--2">
                         <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
                                 Name
@@ -607,8 +604,7 @@
                             </td>
                           </tr>                        
                         </tbody>
-    
-                        <tbody class="govuk-table__body">
+                        <tbody class="govuk-table__body opss-table-grouped-by--1">
                         <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
                                 Name
@@ -642,7 +638,7 @@
                           </tr>                        
                         </tbody>
     
-                        <tbody class="govuk-table__body">
+                        <tbody class="govuk-table__body opss-table-grouped-by--1">
                         <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
                                 Name
@@ -676,7 +672,7 @@
                           </tr>                        
                         </tbody>
     
-                        <tbody class="govuk-table__body">
+                        <tbody class="govuk-table__body opss-table-grouped-by--2">
                         <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
                                 Name
@@ -710,7 +706,7 @@
                           </tr>                        
                         </tbody>
     
-                        <tbody class="govuk-table__body">
+                        <tbody class="govuk-table__body opss-table-grouped-by--2">
                         <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
                                 Name
@@ -743,12 +739,7 @@
                             </td>
                           </tr>                        
                         </tbody>
-                        
-                        
-
-
-
-                        <tbody class="govuk-table__body">
+                         <tbody class="govuk-table__body opss-table-grouped-by--1">
                             <tr class="govuk-table__row">
                                 <th class="govuk-visually-hidden">
                                     Name
@@ -780,9 +771,8 @@
                                     <span class="govuk-!-font-size-14"><mark>Consectetur lorem etilee</mark>. </span> 
                                 </td>
                               </tr>                            
-                            </tbody>
-        
-                            <tbody class="govuk-table__body">
+                        </tbody>
+                        <tbody class="govuk-table__body opss-table-grouped-by--1">
                             <tr class="govuk-table__row">
                                 <th class="govuk-visually-hidden">
                                     Name
@@ -802,7 +792,7 @@
                                     UKCP-675630988
                                 </td>
                                 <td headers="resperson item-12 meta-12" class="govuk-table__cell">
-                                    Smith and sons
+                                    Arkwrights sports
                                 </td>
                             </tr>
                             <tr class="govuk-table__row">
@@ -816,7 +806,7 @@
                               </tr>                            
                             </tbody>
         
-                            <tbody class="govuk-table__body">
+                            <tbody class="govuk-table__body opss-table-grouped-by--2">
                             <tr class="govuk-table__row">
                                 <th class="govuk-visually-hidden">
                                     Name
@@ -850,7 +840,7 @@
                               </tr>                            
                             </tbody>
         
-                            <tbody class="govuk-table__body">
+                            <tbody class="govuk-table__body opss-table-grouped-by--2">
                             <tr class="govuk-table__row">
                                 <th class="govuk-visually-hidden">
                                     Name
@@ -883,12 +873,7 @@
                                 </td>
                               </tr>                            
                             </tbody>              
-                            
-                            
-
-
-
-                            <tbody class="govuk-table__body">
+                            <tbody class="govuk-table__body opss-table-grouped-by--2">
                                 <tr class="govuk-table__row">
                                     <th class="govuk-visually-hidden">
                                         Name
@@ -922,7 +907,7 @@
                                   </tr>                                
                                 </tbody>
             
-                                <tbody class="govuk-table__body">
+                                <tbody class="govuk-table__body opss-table-grouped-by--1">
                                 <tr class="govuk-table__row">
                                     <th class="govuk-visually-hidden">
                                         Name
@@ -956,7 +941,7 @@
                                   </tr>                                
                                 </tbody>
             
-                                <tbody class="govuk-table__body">
+                                <tbody class="govuk-table__body opss-table-grouped-by--1">
                                 <tr class="govuk-table__row">
                                     <th class="govuk-visually-hidden">
                                         Name
@@ -990,7 +975,7 @@
                                   </tr>                                
                                 </tbody>
             
-                                <tbody class="govuk-table__body">
+                                <tbody class="govuk-table__body opss-table-grouped-by--none">
                                 <tr class="govuk-table__row">
                                     <th class="govuk-visually-hidden">
                                         Name
@@ -1024,7 +1009,7 @@
                                   </tr>                                  
                                 </tbody>
             
-                                <tbody class="govuk-table__body">
+                                <tbody class="govuk-table__body opss-table-grouped-by--none">
                                 <tr class="govuk-table__row">
                                     <th class="govuk-visually-hidden">
                                         Name
@@ -1057,7 +1042,7 @@
                                     </td>
                                   </tr>                                  
                                 </tbody> 
-                                <tbody class="govuk-table__body">
+                                <tbody class="govuk-table__body opss-table-grouped-by--none">
                                     <tr class="govuk-table__row">
                                         <th class="govuk-visually-hidden">
                                             Name
