--- a/app/views/cosmetics-general/ingredients-pages.html
+++ b/app/views/cosmetics-general/ingredients-pages.html
@@ -87,7 +87,7 @@
                 Main design(s)
             </h2>
 
-            <p class="govuk-body">These pages show the 'Concentrations' journey forms:</p>
+            <p class="govuk-body govuk-!-font-weight-bold">These pages show the 'exact' journey forms:</p>
 
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
@@ -108,13 +108,21 @@
 
             </ul> 
 
-            <p class="govuk-body">This page shows the 'Ranges' journey form design:</p>
+            <p class="govuk-body govuk-!-font-weight-bold">This page shows the 'ranges' journey form design:</p>
 
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
                     <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2a-b-enter-ingredient" target="_blank">Add the ingredients form (ranges)</a> <br><i>The 'Is it poisonous?' question is a required field.</i>
                 </li>
             </ul>
+
+            <p class="govuk-body govuk-!-font-weight-bold">This page shows the 'poisonous' form used during the Formulation journey:</p>    
+            
+            <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
+                <li>
+                    <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2a-enter-ingredient-poison" target="_blank">Add the ingredients form (ranges)</a> <br>It is a slight variant of the 'exact' form design: The 'poisonous' is added to the H1 and the second bullet point in the hint section uses a different text. NOTE the 3x new attributes added to the poisonous checkbox ('checked','disabled' and the aria attribute set to true). 
+                </li>
+            </ul>            
 
         </div>
 
