updates to ingredient pages

--- a/app/views/cosmetics-general/ingredients-pages.html
+++ b/app/views/cosmetics-general/ingredients-pages.html
@@ -38,42 +38,7 @@
                         <a class="govuk-link govuk-link--no-visited-state" href="https://www.figma.com/file/OzYtlSk8sXUulMQOWrkwOS/COS-new-ingredients-flow?node-id=0%3A1" target="_blank">Diagram(s) of user flows</a>
                     </p>
 
-                    <p class="govuk-body">
-                        Here are the initial design concepts - not finalised - for the new ingredients pages (to be inserted into the current user journey within the new tasks bases pattern).
-                    </p>
-
-                    <p class="govuk-body">
-                        All pages with initial inline notes.
-                    </p>  
-                    
-                    <p class="govuk-body">
-                        The current examples (below) show forms referring to "<b>What is the exact concentration?</b>", but the user may choose the option to specify via a "concentration <b>range</b>". These will be identical forms ('exact' substituted out for 'range'). The second bullet point text at the start of each page will also be contextual: either "exact" statement or the concentration ranges.
-                    </p>
-
-                    <p class="govuk-body">
-                        Ingredients are added/saved upon selecting the 'Save and continue' buttons (not at the end of a given task).
-                    </p> 
-
-                    <h1 class="govuk-heading-m govuk-!-margin-bottom-2">
-                        Highlights summary
-                    </h1>                    
-                    
-                    <ul class="govuk-list govuk-list--bullet">
-                        <li>This journey is idential for two alternative journeys: exact concentrations and concentration ranges</li>
-                        <li>Inserted into the current task flow, the user adds a new ingredient, page by page</li>
-                        <li>But, when using this same mini-flow (within the tasks flow) when a user is <b>re-editing a draft</b> ... 
-
-                            <ul class="govuk-list govuk-list--bullet">
-                                <li>We add a 'Remove this ingredient' link (and its confirmation pages)</li>
-                                <li>When the user pages through the previously entered ingredients we highlight (bold text) the current ingredient (in the righthand list)</li>
-                                <li>We add a 'Skip' link to the ingredient form page <b>if</b> adding a <b>new</b> ingredient</li>
-                                <li>At the end of a run of ingredient pages, we insert a 'Do you want to add an ingredient?' page (and its confirmation pages)</li>
-                            </ul>
-
-                        </li>
-                    </ul>
-
-                </div>
+                 </div>
             </div>
 
         </div>
@@ -116,7 +81,7 @@
 
             </ul> 
 
-            <p class="govuk-body govuk-!-font-weight-bold">3. This page shows the 'ranges' journey form design:</p>
+            <p class="govuk-body govuk-!-font-weight-bold">3. This page shows the 'ranges' journey forms design:</p>
 
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
