--- a/app/views/cosmetics-general/ingredient-NICS-page-redesign.html
+++ b/app/views/cosmetics-general/ingredient-NICS-page-redesign.html
@@ -24,7 +24,7 @@
           
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">
-              Does the product contain any poisonous ingredients?
+              Does the product contain poisonous ingredients?
             </h1>
           </legend>
 
