test edit for new heroku pw

--- a/app/views/cosmetics-general/ingredients-pages.html
+++ b/app/views/cosmetics-general/ingredients-pages.html
@@ -299,7 +299,7 @@
 
 <div class="govuk-!-padding-top-6 govuk-!-padding-right-4 govuk-!-padding-bottom-3 govuk-!-padding-left-5 govuk-!-margin-bottom-8 opss-border-all">
     <h3 class="govuk-heading-s">
-        Some developer notes:
+        Some developer notes (for the submit and search pages):
     </h3>
 
     <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
